package simulacro_parcial.ejercicio3;

public interface Observador {
    void actualizar(float marea);
}
